--- a/requirements.txt
+++ b/requirements.txt
@@ -2,83 +2,6 @@ streamlit
 pandas
 numpy
 joblib
-
-
-
-# Function to download the model if it does not exist
-def download_model():
-    if not os.path.exists('diab.joblib'):
-        url = 'https://drive.google.com/file/d/1dBYtJd1GtDwhUgJ0wJyarLmIZtogapoh'
-        gdown.download(url, 'diab.joblib', quiet=False)
-
-download_model()  # Ensure the model is downloaded
-model = load('diab.joblib')
-
-# Load the pretrained RandomForest model
-#model = load(model_path)
-
-age, height, weight, dprna, dpralbum, dprhct, optime, drenainsf, 
-
-sex = {0: 'male', 1: 'female'}
-inout =  {0: 'Inpatient', 1: 'Outpatient'}
-transt= {0: 'Not transferred (admitted from home)', 1: 'From acute care hospital inpatient', 2: 'Outside emergency department', 3: 'Other'}
-dischdest = {0: 'Home', 1: 'Other', 2: 'Rehab', 3: 'Skilled Care, Not Home', 4: 'Unknown'}
-anesthes = {0: 'General', 1: 'MAC/IV Sedation', 2: 'Spinal', 3: 'Other'}
-surgspec = {0: 'Urology', 1: 'Orthopedics', 2: 'General Surgery', 3: 'Neurosurgery', 4: 'Thoracic', 5: 'Otolaryngology (ENT)', 6: 'Vascular', 7: 'Plastics', 8: 'Cardiac Surgery', 9: 'Gynecology'}
-electsurg = {0:"No", 1:"Yes"}
-diabetes = {0: 'NO', 1: 'NON-INSULIN', 2: 'INSULIN'}
-smoke = {0:"No", 1:"Yes"}
-dyspnea = {0: 'No', 1: 'MODERATE EXERTION', 2: 'AT REST'}
-discancr =  {0:"No", 1:"Yes"}
-emergency =  {0:"No", 1:"Yes"}
-asaclas =  {0:"No", 1:"Yes"}
-steroid=  {0:"No", 1:"Yes"}
-wndclas =  {0: 'Clean/Contaminated', 1: 'Clean', 2: 'Dirty/Infected', 3: 'Contaminated'}
-
-age, height, weight, dprna, dpralbum, dprhct, optime, drenainsf, 
-
-
-inout =  { 'Inpatient', 'Outpatient'}
-transt= {'Not transferred (admitted from home)',  'From acute care hospital inpatient',  'Outside emergency department',  'Other'}
-dischdest = {'Home', 'Other', 'Rehab', 'Skilled Care, Not Home',  'Unknown'}
-anesthes = {'General',  'MAC/IV Sedation',  'Spinal',  'Other'}
-surgspec = { 'Urology',  'Orthopedics',  'General Surgery', 'Neurosurgery', 'Thoracic',  'Otolaryngology (ENT)', 'Vascular', 'Plastics',  'Cardiac Surgery', 'Gynecology'}
-electsurg = {"No", "Yes"}
-diabetes = { 'NO', 'NON-INSULIN',  'INSULIN'}
-smoke = {"No", "Yes"}
-dyspnea = { 'No', 'MODERATE EXERTION',  'AT REST'}
-discancr =  {"No", "Yes"}
-emergency =  {"No", "Yes"}
-asaclas =  {"No", "Yes"}
-steroid=  {"No", "Yes"}
-wndclas =  {'Clean/Contaminated',  'Clean',  'Dirty/Infected', 'Contaminated'}
-
-Leukemia:
-ALL: Acute Lymphoblastic Leukemia
-AML: Acute Myeloid Leukemia
-CML: Chronic Myeloid Leukemia
-CLL: Chronic Lymphocytic Leukemia
-Lymphoma:
-HL: Hodgkin Lymphoma
-NHL: Non-Hodgkin Lymphoma
-
-wndinf
-prsepis
-
-crude mortality rate
-survival rate
-
-
-Vascular..
-General Surgery..
-Urology..
-Plastics..
-Gynecology..
-Otolaryngology (ENT)..
-Thoracic..
-Orthopedics..
-Neurosurgery..
-Cardiac Surgery..
-Interventional Radiologist
-
-
+gdown
+scikit-learn==1.2.2
+joblib==1.2.0
